tests/baselines/reference/enumGenericTypeClash.errors.txt
==== tests/cases/compiler/enumGenericTypeClash.ts (1 errors) ====
    class X<A,B,C> { }
    enum X { MyVal }
         ~
!!! error TS2000: Duplicate identifier 'X'.
    